@@ -3,6 +3,7 @@
 2025-12-17 - version 3.9.0
 * Update - WordPress 6.9 compatible.
 * Update - WooCommerce 10.4 compatible.
+* Dev - Avoid handling non-objects when processing term counts in the get_terms filter.
 
 2025-10-31 - version 3.8.0
 * Update - WordPress 6.8 compatible.
